# googletest-starter-project-separate-folders

./: .gitignore  CMakeLists.txt  README.md  build_and_test.bat  conanfile.txt
tests/: CMakeLists.txt  SampleTest.cpp
